# monzo_apy

./: .flake8  .gitignore  LICENSE  README.md  auth_flow.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py
config/: auth.example.json
monzo/: __init__.py  auth.py  client.py  exceptions.py  models.py
tests/: __init__.py  test_async_client.py  test_client.py
tests/integration/: test_live_client.py
